<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/colorAccent">

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="379dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/profile_image_description"
        app:layout_constraintBottom_toTopOf="@+id/name_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/my_profile_large"
        tools:layout_width="0dp" />

    <TextView
        android:id="@+id/name_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/berskshire_swash_falj"
        android:text="@string/my_name"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/track_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImage"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/track_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/berskshire_swash_falj"
        android:text="@string/Track"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/country_textView"
        app:layout_constraintEnd_toEndOf="@+id/name_textView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/name_textView"
        app:layout_constraintTop_toBottomOf="@+id/name_textView"
        app:layout_editor_absoluteY="453dp" />

    <TextView
        android:id="@+id/country_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/berskshire_swash_falj"
        android:text="@string/Country"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/email_textView"
        app:layout_constraintEnd_toEndOf="@+id/name_textView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/name_textView"
        app:layout_constraintTop_toBottomOf="@+id/track_textView" />

    <TextView
        android:id="@+id/email_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/berskshire_swash_falj"
        android:text="@string/email"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/phone_number_textView"
        app:layout_constraintEnd_toEndOf="@+id/name_textView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/name_textView"
        app:layout_constraintTop_toBottomOf="@+id/country_textView" />

    <TextView
        android:id="@+id/phone_number_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/berskshire_swash_falj"
        android:text="@string/phone_number"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/Slack_username_textView"
        app:layout_constraintEnd_toEndOf="@+id/name_textView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/name_textView"
        app:layout_constraintTop_toBottomOf="@+id/email_textView" />

    <TextView
        android:id="@+id/Slack_username_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/berskshire_swash_falj"
        android:text="@string/slack_user_name"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/name_textView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/name_textView"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_textView" />


</android.support.constraint.ConstraintLayout>