<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="154dp"
        android:fontFamily="@font/lobster_regular"
        android:text="@string/welcome_to_alc_4_0"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:textSize="38sp"
        app:layout_constraintBottom_toTopOf="@+id/to_activity_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/to_activity_2"
        style="@android:style/Widget.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="100dp"
        android:layout_marginTop="154dp"
        android:layout_marginEnd="100dp"
        android:background="@android:color/holo_orange_light"
        android:fontFamily="@font/lobster_regular"
        android:text="@string/about_alc"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_textView"
        tools:background="@android:color/holo_orange_light" />

    <Button
        android:id="@+id/to_activity_3"
        style="@android:style/Widget.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/holo_orange_light"
        android:fontFamily="@font/lobster_regular"
        android:text="@string/my_profile"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/black"
        android:textSize="26sp"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/to_activity_2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/to_activity_2"
        app:layout_constraintTop_toBottomOf="@+id/to_activity_2"
        app:layout_constraintVertical_bias="0.107" />

</android.support.constraint.ConstraintLayout>